# meshmeshmesh

./: Cargo.toml  README.md
created_files/: Cubes.bim  CubesWithFaceColorsAndWithout.bim  Pyramid.bim
models/expected/: CubesDeduplication.bim  MultipleMeshesDeduplication.bim  MultipleMeshesDuplication.bim  PyramidDeduplication.bim
src/: barycentric_coordinates.rs  barycentric_coordinates_analysis.rs  bounding_area.rs  bounding_area_analysis.rs  bounding_box.rs  bounding_box_analysis.rs  color.rs  edge.rs  edge_analysis.rs  edge_processing.rs  edge_transformations.rs  element.rs  element_analysis.rs  face_neighbours.rs  face_neighbours_analysis.rs  face_neighbours_angle.rs  graph.rs  graph_analysis.rs  lib.rs  local_coordinate_system.rs  local_coordinate_system_analysis.rs  local_coordinate_system_transformations.rs  mesh.rs  mesh_analysis.rs  mesh_import.rs  mesh_processing.rs  mesh_transformations.rs  point.rs  point2d.rs  point2d_analysis.rs  point_analysis.rs  point_transformations.rs  polygon.rs  polygon2d.rs  polygon2d_analysis.rs  polygon2d_processing.rs  polygon2d_transformations.rs  polygon2d_triangulation.rs  polygon_analysis.rs  polygon_transformations.rs  (+23 more)
