[package]
name = "meshmeshmesh"
version = "0.2.0"
edition = "2021"
authors = ["Wojciech Radaczyński"]
description = "Open-source mesh processing library."
repository = "https://github.com/paireks/meshmeshmesh"
license = "AGPL-3.0-only"
readme = "README.md"
categories = ["algorithms"]
keywords = ["mesh", "geometry"]
exclude = [
    ".idea",
    "models",
    "img"
]

[dependencies]
i_triangle = "=0.35.0"
