[package]
name = "meshmeshmesh"
version = "0.4.0"
edition = "2021"
authors = ["Wojciech Radaczyński"]
description = "Open-source mesh processing library."
repository = "https://github.com/paireks/meshmeshmesh"
license = "AGPL-3.0-only"
readme = "README.md"
categories = ["algorithms"]
keywords = ["mesh", "geometry"]
exclude = [
    ".idea",
    "models",
    "img",
    "created_files"
]

[dependencies]
i_triangle = "=0.35.0"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
